fix: resize invisible/gigantic No Distractions theme icon

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -31,7 +31,7 @@
     border-bottom: 2px solid var(--sn-stylekit-info-color);
   }
 
-  .ionicon {
+  svg {
     width: 12px;
     height: 12px;
     fill: var(--sn-stylekit-secondary-foreground-color);
